test/parsing/ferguson/reserved-shared.good
reserved-shared.chpl:1: error: attempt to redefine reserved type 'shared'
reserved-shared.chpl:3: In function 'f':
reserved-shared.chpl:3: error: attempt to redefine reserved type 'shared'
reserved-shared.chpl:6: error: attempt to redefine reserved type 'shared'
reserved-shared.chpl:7: error: attempt to redefine reserved type 'shared'
reserved-shared.chpl:10: error: attempt to redefine reserved type 'shared'
reserved-shared.chpl:12: error: attempt to redefine reserved type 'shared'
reserved-shared.chpl:15: In function 'test':
reserved-shared.chpl:17: error: attempt to redefine reserved type 'shared'
